@@ -14,14 +14,19 @@ rootProject.extra["versions"] = dependencyVersions
 val otelVersion = "1.4.1"
 rootProject.extra["otelVersion"] = otelVersion
 
+// IMPORTANT when updating opentelemetry version, be sure to update bytebuddy version to match
 val otelInstrumentationVersion = "1.3.1+ai.patch.1"
 
 val DEPENDENCY_BOMS = listOf(
+  "com.google.guava:guava-bom:30.1.1-jre",
   "io.opentelemetry:opentelemetry-bom:${otelVersion}",
   "io.opentelemetry:opentelemetry-bom-alpha:${otelVersion}-alpha",
   "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha:${otelInstrumentationVersion}-alpha",
   "org.junit:junit-bom:5.7.2"
 )
+
+// TODO consolidate to just one json library
+// TODO remove dependencies on apache commons
 
 val DEPENDENCY_SETS = listOf(
   DependencySet(
@@ -56,6 +61,11 @@ val DEPENDENCY_SETS = listOf(
     listOf("testcontainers", "junit-jupiter")
   ),
   DependencySet(
+    "com.squareup.moshi",
+    "1.11.0", // 1.12.0 and above use okio 2.x which pulls in kotlin libs
+    listOf("moshi", "moshi-adapters")
+  ),
+  DependencySet(
     "io.opentelemetry.javaagent",
     "${otelInstrumentationVersion}-alpha",
     listOf(
@@ -63,6 +73,18 @@ val DEPENDENCY_SETS = listOf(
       "opentelemetry-javaagent-bootstrap",
       "opentelemetry-javaagent-tooling",
       "opentelemetry-javaagent-extension-api")
+  ),
+  DependencySet(
+    "com.microsoft.azure",
+    "2.6.3", // need the latest version for Java 16+ support without having to use --illegal-access=permit
+    listOf(
+      "applicationinsights-core",
+      "applicationinsights-logging-log4j1_2",
+      "applicationinsights-logging-log4j2",
+      "applicationinsights-logging-logback",
+      "applicationinsights-web",
+      "applicationinsights-web-auto",
+      "applicationinsights-spring-boot-starter")
   )
 )
 
@@ -72,21 +94,17 @@ val DEPENDENCIES = listOf(
   "com.google.auto.service:auto-service:1.0",
   "com.uber.nullaway:nullaway:0.9.1",
   "commons-codec:commons-codec:1.15",
+  "commons-io:commons-io:2.7",
   "org.apache.commons:commons-lang3:3.7",
+  "org.apache.commons:commons-text:1.9",
   "com.google.code.gson:gson:2.8.2",
   "com.azure:azure-core:1.17.0",
   "com.azure:azure-storage-blob:12.12.0",
-  "com.squareup.moshi:moshi:1.11.0", // 1.12.0 and above use okio 2.x which pulls in kotlin libs
-  "com.squareup.moshi:moshi-adapters:1.11.0",
   "com.github.oshi:oshi-core:5.6.0",
   "org.assertj:assertj-core:3.19.0",
   "io.github.hakky54:logcaptor:2.5.0",
   "com.microsoft.jfr:jfr-streaming:1.2.0",
-  "org.checkerframework:checker-qual:3.14.0",
-  "com.microsoft.azure:applicationinsights-core:2.6.3",
-  "com.microsoft.azure:applicationinsights-web:2.6.3",
-  "com.microsoft.azure:applicationinsights-web-auto:2.6.3",
-  "com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.3",
+  "org.checkerframework:checker-qual:3.14.0"
 )
 
 javaPlatform {
